--- a/package/batocera/core/batocera-bluetooth/Config.in
+++ b/package/batocera/core/batocera-bluetooth/Config.in
@@ -4,9 +4,11 @@ config BR2_PACKAGE_BATOCERA_BLUETOOTH
 	select BR2_PACKAGE_BLUEZ_TOOLS
 	select BR2_PACKAGE_BLUEZ5_UTILS
 	select BR2_PACKAGE_BLUEZ5_UTILS_CLIENT
+	select BR2_PACKAGE_BLUEZ5_UTILS_MONITOR
 	select BR2_PACKAGE_BLUEZ5_UTILS_TEST
 	select BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED # needed for hciattach, ...
 	select BR2_PACKAGE_BLUEZ5_UTILS_TOOLS # is it still needed ?
+	select BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_SIXAXIS # sixaxis for PS3 controllers
 	select BR2_PACKAGE_UTIL_LINUX_RFKILL
 	help
 	  Bluetooth support and scripts for batocera.linux
