--- a/package/libraries/sdl3_image/Config.in
+++ b/package/libraries/sdl3_image/Config.in
@@ -4,7 +4,7 @@ config BR2_PACKAGE_SDL3_IMAGE
 	select BR2_PACKAGE_SDL3
 	select BR2_PACKAGE_WEBP
 	select BR2_PACKAGE_WEBP_DEMUX
-	select BR2_PACKAGE_LIBAVIF
+	#select BR2_PACKAGE_LIBAVIF
 	select BR2_PACKAGE_TIFF
 	help
 	  SDL_image 3.0
