--- a/.editorconfig
+++ b/.editorconfig
@@ -49,3 +49,8 @@ indent_size = 2
 [*.json]
 indent_style = space
 indent_size = 2
+
+# 4 space indentation
+[*.py]
+indent_style = space
+indent_size = 4
