--- a/Config.in
+++ b/Config.in
@@ -317,6 +317,7 @@ menu "Utils"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/lgogdownloader/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/re2c/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/rgbds/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/umtp-responder/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/wsdd-native/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/xxd/Config.in"
 endmenu
