--- a/board/broadcom/bcm2711/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2711/linux-broadcom64-current.config
@@ -538,9 +538,7 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
-# CONFIG_CMDLINE_FORCE is not set
+CONFIG_CMDLINE=""
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_COMPRESSED_INSTALL is not set
